--- a/examples/languages/squaak/doc/tutorial_episode_8.pod
+++ b/examples/languages/squaak/doc/tutorial_episode_8.pod
@@ -37,9 +37,8 @@ Just as there are integer literals (42) and string literals ("hello world")
 that can be assigned to variables, you can have array literals. Below is the
 grammar rule for this:
 
- rule array_constructor {
-     '[' [ <expression> [',' <expression>]*]? ']'
-     {*}
+ rule circumfix:sym<[ ]> {
+     '[' [<EXPR> ** ',']? ']'
  }
 
 Some examples are shown below:
@@ -60,15 +59,20 @@ Besides array literals, Squaak supports hashtable literals, that can be
 constructed through a hashtable constructor. The syntax for this is expressed
 below:
 
- rule hash_constructor {
-     '{' [<named_field> [',' <named_field>]* ]? '}'
-     {*}
+ rule circumfix:sym<{ }> {
+     '{' [<named_field> ** ',']? '}'
  }
 
  rule named_field {
-     <string_constant> '=>' <expression>
-     {*}
+     <string_constant> '=>' <EXPR>
  }
+
+ # We need to rename our existing string_constant term to a separate rule
+ # so that we can use it specifically.
+ token term:sym<string_constant> { <string_constant> }
+
+ # Don't forget to rename the action method.
+ token string_constant { <quote> }
 
 Some examples are shown below:
 
@@ -91,23 +95,13 @@ straightforward. First, we're going to update the grammar rule for primary:
 
  rule primary {
      <identifier> <postfix_expression>*
-     {*}
  }
 
- rule postfix_expression {
-     | <index> {*}   #= index
-     | <key> {*}     #= key
- }
+ proto rule postfix_expression { <...> }
 
- rule index {
-     '[' <expression> ']'
-     {*}
- }
+ rule postfix_expression:sym<index> { '[' <EXPR> ']' }
 
- rule key {
-     '{' <expression> '}'
-     {*}
- }
+ rule postfix_expression:sym<key> { '{' <EXPR> '}' }
 
 A primary object is now an identifier followed by any number of
 postfix-expressions. A postfix expression is either a hashtable key or an array
@@ -121,8 +115,8 @@ hashtable, and that foo{"key"} yields an array, and so forth. Implementing this
 is actually quite simple. First, let us see how to implement the action method
 index.
 
- method index($/) {
-     my $index := $( $<expression> );
+ method postfix_expression:sym<index>($/) {
+     my $index := $<EXPR>.ast;
      my $past  := PAST::Var.new( $index,
                                  :scope('keyed'),
                                  :viviself('Undef'),
@@ -132,7 +126,7 @@ index.
      make $past;
  }
 
-First, we retrieve the PAST node for expression. Then, we create a keyed
+First, we retrieve the PAST node for EXPR. Then, we create a keyed
 variable access operation, by creating a PAST::Var node and setting its scope
 to C<keyed>. If a C<PAST::Var> node has keyed scope, then the first child is
 evaluated as the aggregate object, and the second child is evaluated as the
@@ -144,10 +138,10 @@ Here's where the updated action method for primary comes in.
 This is shown below.
 
  method primary($/) {
-     my $past := $( $<identifier> );
+     my $past := $<identifier>.ast;
 
      for $<postfix_expression> {
-         my $expr := $( $_ );
+         my $expr := $_.ast;
          $expr.unshift( $past );
          $past := $expr;
      }
@@ -219,15 +213,19 @@ parameter, Parrot creates an array, while for the named slurpy parameter a
 hashtable is created. This happens to be exactly what we need! Implementing
 the array and hash constructors becomes trivial:
 
- .sub '!array'
-     .param pmc fields :slurpy
-     .return (fields)
- .end
+ # Inset this in src/Squaak/Runtime.pm
 
- .sub '!hash'
-     .param pmc fields :named :slurpy
-     .return (fields)
- .end
+ {
+     my sub array (*@args) { @args; }
+     my sub hash (*%args) { %args; }
+
+     Q:PIR {
+         $P0 = find_lex 'array'
+         set_global '!array', $P0
+         $P0 = find_lex 'hash'
+         set_global '!hash', $P1
+     }
+ }
 
 Array and hashtable constructors can then be compiled into subroutine calls to
 the respective Parrot subroutines, passing all fields as arguments. (Note that
@@ -236,8 +234,8 @@ prevents us from calling these subs in normal Squaak code).
 
 =head2 Basic data types and Aggregates as arguments
 
-All data types, both basic and aggregate data types are represented by Parrot
-Magic Cookies (PMCs). The PMC is one of the four built-in data types that Parrot
+All data types, both basic and aggregate data types are represented by Polymorphic
+Containers (PMCs). The PMC is one of the four built-in data types that Parrot
 can handle; the others are integer, floating-point and string. Currently, the
 PCT can only generate code to handle PMCs, not the other basic data types.
 Parrot has registers for each its four built-in data types. The integer,
@@ -290,7 +288,7 @@ for hashtables. Implement the action method for key.
 
 =item *
 
-Implement the action methods for array_constructor and hash_constructor. Use a
+Implement the action methods for circumfix:sym<[ ]> and circumfix:sym<{ }>. Use a
 C<PAST::Op> node and set the pasttype to 'call'. Use the "name" attribute to
 specify the names of the subs to be invoked (e.g., C<:name("!array")> ). Note
 that all hash fields must be passed as named arguments. Check out PDD26 for
@@ -315,27 +313,29 @@ Hint: use a C<PAST::Val> node for the string conversion.
 
 =item 1
 
-    method key($/) {
-    my $key := $( $<expression> );
+    method postfix_expression:sym<key>($/) {
+        my $key := $<expression>.ast;
 
-    make PAST::Var.new( $key, :scope('keyed'),
-                              :vivibase('Hash'),
-                              :viviself('Undef'),
-                              :node($/) );
+        make PAST::Var.new( $key, :scope('keyed'),
+                                  :vivibase('Hash'),
+                                  :viviself('Undef'),
+                                  :node($/) );
     }
 
 =item 2
 
+    method term:sym<string_constant>($/) { make $<string_constant>.ast; }
+
     method named_field($/) {
-        my $past := $( $<expression> );
-        my $name := $( $<string_constant> );
+        my $past := $<EXPR>.ast;
+        my $name := $<string_constant>.ast;
         ## the passed expression is in fact a named argument,
         ## use the named() accessor to set that name.
         $past.named($name);
         make $past;
     }
 
-    method array_constructor($/) {
+    method circumfix:sym<[ ]>($/) {
         ## use the parrot calling conventions to
         ## create an array,
         ## using the "anonymous" sub !array
@@ -343,13 +343,13 @@ Hint: use a C<PAST::Val> node for the string conversion.
         my $past := PAST::Op.new( :name('!array'),
                                   :pasttype('call'),
                                   :node($/) );
-        for $<expression> {
-            $past.push($($_));
+        for $<EXPR> {
+            $past.push($_.ast);
         }
         make $past;
     }
 
-    method hash_constructor($/) {
+    method circumfix:sym<{ }>($/) {
         ## use the parrot calling conventions to
         ## create a hash, using the "anonymous" sub
         ## !hash (which is not a valid Squaak name)
@@ -357,31 +357,25 @@ Hint: use a C<PAST::Val> node for the string conversion.
                                   :pasttype('call'),
                                   :node($/) );
         for $<named_field> {
-            $past.push($($_));
+            $past.push($_.ast);
         }
         make $past;
     }
 
 =item 3
 
-    rule postfix_expression {
-        | <key> {*}         #= key
-        | <member> {*}      #= member
-        | <index> {*}       #= index
-    }
 
-    rule member {
+    rule postfix_expression:sym<member> {
         '.' <identifier>
-        {*}
     }
 
-    method member($/) {
-        my $member := $( $<identifier> );
+    method postfix_expression:sym<member>($/) {
+        my $member := $<identifier>.ast;
         ## x.y is syntactic sugar for x{"y"},
         ## so stringify the identifier:
-        my $key    := PAST::Val.new( :returns('String'),
-                                     :value($member.name()),
-                                     :node($/) );
+        my $key := PAST::Val.new( :returns('String'),
+                                  :value($member.name),
+                                  :node($/) );
 
         ## the rest of this method is the same
         ## as method key() above.
