--- a/examples/languages/squaak/doc/tutorial_episode_1.pod
+++ b/examples/languages/squaak/doc/tutorial_episode_1.pod
@@ -99,36 +99,27 @@ parts:
 
 =over 4
 
-=item B<P>arrot B<G>rammar B<E>ngine (PGE).
+=item B<N>ot B<Q>uite B<P>erl (6) (NQP-rx).
 
-The PGE is an advanced engine for regular expressions. Besides regexes as found
-in Perl 5, it can also be used to define language grammars, using Perl 6 syntax.
-(Check the references for the specification.)
+NQP is a lightweight language inspired by Perl 6 and can be used to write the
+methods that must be executed during the parsing phase, just as you can write
+actions in a Yacc/Bison input file. It also provides the regular expression engine we'll use to write our grammar. In addition to the capabilities of Perl 5's regexes, the Perl 6 regexes that NQP implements can be used to define language grammars. (Check the references for the specification.)
 
 =item B<P>arrot B<A>bstract B<S>yntax B<T>ree (PAST).
 
 The PAST nodes are a set of classes defining generic abstract syntax tree nodes
 that represent common language constructs.
 
-=item HLLCompiler class.
+=item HLL::Compiler class.
 
 This class is the compiler driver for any PCT-based compiler.
-
-=item B<N>ot B<Q>uite B<P>erl (6) (NQP).
-
-NQP is a lightweight language inspired by Perl 6 and can be used to write the
-methods that must be executed during the parsing phase, just as you can write
-actions in a Yacc/Bison input file.
 
 =back
 
 =head2 Getting Started
 
 For this tutorial, it is assumed you have successfully compiled parrot
-(and maybe even run the test suite). If you browse through the languages
-directory in the Parrot source tree, you'll find a number of language
-implementations. Most of them are not complete yet; some are maintained
-actively and others aren't. If, after reading this tutorial, you feel like
+(and maybe even run the test suite). If, after reading this tutorial, you feel like
 contributing to one of these languages, you can check out the mailing list or
 join IRC (see the references section for details).
 
@@ -137,13 +128,13 @@ Parrot comes with a special shell script to generate the necessary files for a
 language implementation. In order to generate these files for our language,
 type (assuming you're in Parrot's root directory):
 
- $ perl tools/dev/mk_language_shell.pl Squaak languages/squaak
+ $ perl tools/dev/mk_language_shell.pl Squaak ~/src/squaak
 
 (Note: if you're on Windows, you should use backslashes.) This will generate the
-files in a directory F<languages/squaak>, and use the name Squaak as the language's
+files in a directory F<~/src/squaak>, and use the name Squaak as the language's
 name.
 
-After this, go to the directory F<languages/squaak> and type:
+After this, go to the directory F<~/src/squaak> and type:
 
  $ parrot setup.pir test
 
@@ -165,20 +156,20 @@ your favorite editor, and put in this statement:
 
 Save it the as file F<test.sq> and type:
 
- $ ../../parrot squaak.pbc test.sq
+ $ ./installable_squaak test.sq
 
-This will run Parrot, specifying squaak.pbc as the file to be run by Parrot,
+"installable_squaak" is a "fake-cutable" an executable that bundles the Parrot interpreter and the compiled bytecode for a program to allow treating a Parrot program as a normal executable program. This will run Parrot, specifying squaak.pbc as the file to be run by Parrot,
 which takes a single argument: the file test.sq. If all went well, you should
 see the following output:
 
- $ ../../parrot squaak.pbc test.sq
+ $ ./installable_squaak test.sq
  Squaak!
 
 Instead of running a script file, you can also run the Squaak compiler as an
 interactive interpreter. Run the Squaak compiler without specifying a script
 file, and type the same statement as you wrote in the file:
 
- $ ../../parrot squaak.pbc
+ $ ./installable_squaak
  say "Squaak!";
 
 which will print:
@@ -191,7 +182,7 @@ This first episode of this tutorial is mainly an overview of what will be
 coming. Hopefully you now have a global idea of what the Parrot Compiler Tools
 are, and how they can be used to build a compiler targeting Parrot. If you want
 to check out some serious usage of the PCT, check out Rakudo (Perl 6 on Parrot)
-in languages/perl6 or Pynie (Python on Parrot) in languages/pynie.
+at http://rakudo.org/ or Pynie (Python on Parrot) at http://code.google.com/p/pynie/ .
 
 The next episodes will focus on the step-by-step implementation of our language,
 including the following topics:
@@ -200,7 +191,7 @@ including the following topics:
 
 =item structure of PCT-based compilers
 
-=item using PGE rules to define the language grammar
+=item using NQP-rx rules to define the language grammar
 
 =item implementing operator precedence using an operator precedence table
 
@@ -223,8 +214,8 @@ will be posted several days after the episode.
 
 =head3 Advanced interactive mode.
 
-Launch your favorite editor and look at the file squaak.pir in the directory
-languages/squaak. This file contains the main function (entry point) of the
+Launch your favorite editor and look at the file Compiler.pm in the directory
+F<~/src/squaak/src/Squaak/>. This file contains the main function (entry point) of the
 compiler. The class HLLCcompiler defines methods to set a command-line banner
 and prompt for your compiler when it is running in interactive mode. For
 instance, when you run Python in interactive mode, you'll see:
@@ -242,19 +233,19 @@ which is called a prompt. For Squaak, we'd like to see the following when
 running in interactive mode (of course you can change this according to your
 personal taste):
 
- $ ../../parrot squaak.pbc
+ $ ./installable_squaak
  Squaak for Parrot VM.
  >
 
 Add code to the file squaak.pir to achieve this.
 
-Hint 1: Look in the onload subroutine.
+Hint 1: Look in the INIT block.
 
-Hint 2: Note that only double-quoted strings in PIR can interpret
+Hint 2: Note that only double-quoted strings in NQP can interpret
 escape-characters such as '\n'.
 
 Hint 3: The functions to do this are documented in
-compilers/pct/src/PCT/HLLCompiler.pir.
+F<compilers/pct/src/PCT/HLLCompiler.pir>.
 
 =head2 References
 
@@ -270,7 +261,7 @@ compilers/pct/src/PCT/HLLCompiler.pir.
 
 =item * Operator Precedence Parsing with PCT: docs/pct/pct_optable_guide.pod
 
-=item * Perl 6/PGE rules syntax: Synopsis 5
+=item * Perl 6/NQP rules syntax: Synopsis 5 at http://perlcabal.org/syn/S05.html or http://svn.pugscode.org/pugs/docs/Perl6/Spec/S05-regex.pod
 
 =back
 
