--- a/examples/languages/squaak/doc/tutorial_episode_2.pod
+++ b/examples/languages/squaak/doc/tutorial_episode_2.pod
@@ -24,7 +24,7 @@ file, or invoke the compiler without a command line argument, in which case our
 compiler enters the interactive mode. Consider the first case, passing the file
 test.sq, just as we did before:
 
- $ ../../parrot squaak.pbc test.sq
+ $ ./installable_squeak test.sq
 
 When invoking our compiler like this, the file test.sq is compiled and the
 generated code (bytecode) is executed immediately by Parrot. How does this work,
@@ -50,7 +50,7 @@ four default compilation phases of an HLLCompiler object:
 This is an example of using the target option set to "parse", which will print
 the parse tree of the input to stdout:
 
- $ ../../parrot squaak.pbc --target=parse test.sq
+ $ ./installable_squeak --target=parse test.sq
 
 In interactive mode, giving this input:
 
@@ -58,24 +58,32 @@ In interactive mode, giving this input:
 
 will print this parse tree (without the line numbers):
 
-  1 "parse" => PMC 'Squaak::Grammar' => "say 42;\r\n" @ 0 {
-  2    <statement> => ResizablePMCArray (size:1) [
-  3        PMC 'Squaak::Grammar' => "say 42;\r\n" @ 0 {
-  4            <value> => ResizablePMCArray (size:1) [
-  5                PMC 'Squaak::Grammar' => "42" @ 4 {
-  6                    <integer> => PMC 'Squaak::Grammar' => "42" @ 4
-  7                }
-  8            ]
-  9        }
- 10    ]
- 11 }
+  1 "parse" => PMC 'Regex;Match' => "say 42;\n" @ 0 {
+  2    <statementlist> => PMC 'Regex;Match' => "say 42;\n" @ 0 {
+  3         <statement> => ResizablePMCArray (size:1) [
+  4             PMC 'Regex;Match' => "say 42" @ 0 {
+  5                 <statement_control> => PMC 'Regex;Match' => "say 42" @ 0 {
+  6                     <sym> => PMC 'Regex;Match' => "say" @ 0
+  7                     <EXPR> => ResizablePMCArray (size:1) [
+  8                         PMC 'Regex;Match' => "42" @ 4 {
+  9                             <integer> => PMC 'Regex;Match' => "42" @ 4 {
+ 10                                 <VALUE> => PMC 'Regex;Match' => "42" @ 4
+ 11                                 <decint> => \parse[0][0]
+ 12                             }
+ 13                         }
+ 14                     ]
+ 15                 }
+ 16             }
+ 17         ]
+ 18     }
+ 19 }
 
 When changing the value of the target option, the output changes into a
 different representation of the input. Why don't you try that right now?
 
 So, a HLLCompiler object has four compilation phases: parsing, construction of a
 Parrot Abstract Syntax Tree (PAST), construction of a Parrot Opcode Syntax Tree
-(POST), generation of Parrot Intermediate Representation (PIR). After
+(POST) and generation of Parrot Intermediate Representation (PIR). After
 compilation, the generated PIR is executed immediately.
 
 If your compiler needs additional stages, you can add them to your HLLCompiler
@@ -89,58 +97,55 @@ simultaneously. Therefore, these are discussed together.
 Parse phase: match objects and PAST construction
 During the parsing phase, the input is analyzed using Perl 6's extended regular
 expressions, known as Rules (see Synopsis 5 for details). When a rule matches
-some input string, a so-called Match object is created. A Match object is a
-combined array and hashtable, implying it can be indexed by integers as well as
+some input string, a Match object is created. A Match object is a
+combined array and hashtable and can be indexed by integers as well as
 strings. As rules typically consist of other (sub) rules, it is easy to retrieve
 a certain part of the match. For instance, this rule:
 
  rule if_statement {
      'if' <expression> 'then' <statement> 'end'
-     {*}
  }
 
 has two other subrules: expression and statement. The match object for the rule
-if_statement represents the whole string from if to end. When you're interested
-only in the expression or statement part, you can retrieve that by indexing the
-match object by the name of the subrule (in this case, expression and statement,
-respectively).
+C<if_statement> represents the whole string from if to end.  You can retrieve a
+the Match for a subrule by indexing into the Match object using the name of
+that subrule.  For instance, to get the match for C<< <expression> >>, you
+would use C<< $/<expression> >>.  (In nqp, C<< $foo<bar> >> indexes into
+C<$foo> using the constant string C<bar> as a hash key.)
 
 During the parse phase, the PAST is constructed. There is a small set of PAST
-node types, for instance, C<PAST::Var> to represent variables (identifiers, such
-as C<print>), C<PAST::Val> to represent literal values (for instance, C<"hello">
-and C<42>), and so on. Later we shall discuss the various PAST nodes in more
-detail.
+node types. For instance, C<PAST::Var> to represent variables (identifiers, such
+as C<print>) and C<PAST::Val> to represent literal values (for instance, C<"hello">
+and C<42>). Later we'll go through the various PAST nodes in more detail.
 
 Now, you might wonder, at which point exactly is this PAST construction
-happening? This is where the special {*} symbol comes in, just below the string
-'if' in the if_statement rule shown above. These special markers indicate that a
-parse action should be invoked. Such a parse action is just a method that has
-the same name as the rule in which it is written (in this case: if_statement).
-So, during the parsing phase, several parse actions are executed, each of which
-builds a piece of the total PAST representing the input string. More on this
-will be explained later.
+happening? At the end of a successfully matching rule, the rule's parse action
+is performed. Such a parse action is just a method that has the same name as
+the rule which triggers it (in this case: C<if_statement>).  So, during the
+parsing phase, several parse actions are executed, each of which builds a piece
+of the total PAST representing the input string.
 
-The Parrot Abstract Syntax Tree is just a different representation of the same
-input string (your program being compiled). It is a convenient data structure to
-transform into something different (such as executable Parrot code) but also to
-do all sorts of analysis, such as compile-time type checking.
+A Parrot Abstract Syntax Tree is just a compiler-friendly tree-based
+representation of your program. It is convenient both for analysis and
+optimization, and for further transformation into a lower-level representation
+such as POST.
 
 =head2 PAST to POST
 
-After the parse phase during which the PAST is constructed, the HLLCompiler
-transforms this PAST into something called a Parrot Opcode Syntax Tree (POST).
-The POST representation is also a tree structure, but these nodes are on a lower
-abstraction level. For instance, on the PAST level there is a node type to
-represent a while statement (constructed as
-C<PAST::Op.new( :pasttype('while') )> ).
+After the PAST is constructed, the HLLCompiler transforms this PAST into a
+Parrot Opcode Syntax Tree (POST).  The POST representation is also a tree
+structure, but these nodes are on a lower abstraction level and correspond very
+closely to PIR ops.  For instance, the PAST node type which represents a while
+statement (constructed as C<PAST::Op.new( :pasttype('while') )> ) decomposes
+into several POST nodes.
 
-The template for a while statement typically consists of a number of labels and
+The template for a C<while> statement typically consists of a number of labels and
 jump instructions. On the POST level, the same while statement is represented by
-a set of nodes, each representing a one instruction or a label. Therefore, it is
-much easier to transform a POST into something executable than when this is done
-from the PAST level.
+a set of nodes, each representing a one instruction or a label. This makes it
+much easier to transforn POST into executable code.
+
 Usually, as a user of the PCT, you don't need to know details of POST nodes,
-which is why this will not be discussed in further detail. Use the target option
+which is why this will not be discussed in further detail. Use C<--target=post>
 to see what a POST looks like.
 
 =head2 POST to PIR
@@ -168,34 +173,35 @@ four stages:
 
 =back
 
-where we noted that the first two are done during the parse stage. Now, as
-you're reading this tutorial, you're probably interested in using the PCT for
-implementing Your Favorite Language for Parrot. We already saw that a language
-grammar is expressed in Perl 6 Rules. What about the other transformations?
-Well, earlier in this episode we mentioned the term parse actions, and that
-these actions create PAST nodes. After you have written a parse action for each
-grammar rule, you're done!
+The first two transformations happen during the parse stage. Now, as you're
+reading this tutorial, you're probably interested in using the PCT to implement
+Your Favorite Language on top of Parrot. We already saw that a language grammar
+is expressed in Perl 6 Rules. What about the other transformations?  Well,
+earlier in this episode we mentioned parse actions and that these actions
+create PAST nodes. After you have written a parse action for each grammar rule,
+you're done!
 
 Say what?
 
 That's right. Once you have correctly constructed a PAST, your compiler can
 generate executable PIR, which means you just implemented your first language
-for Parrot. Of course, you still need to implement any language specific
-libraries, but that's besides the point.
+on top of Parrot. Of course, you'll still need to implement any language specific
+libraries, but that's beside the point.
 
-PCT-based compilers already know how to transform a PAST into a POST, and how to
-transform a POST into PIR. These transformation stages are already provided by
+PCT-based compilers already know how to transform PAST into POST and how to
+transform POST into PIR. These transformation stages are already provided by
 the PCT.
 
 =head2 What's next?
 
 In this episode we took a closer look at the internals of a PCT-based compiler.
-We discussed the four compilation stages, that transform an input string (a
-program, or script, depending on your definition) into a PAST, a POST and
-finally executable PIR.
+We discussed the four compilation stages which transform an input string (a
+program or script, depending on your definition) into PAST, POST and finally
+executable PIR.
+
 The next episodes is where the Fun Stuff is: we will be implementing Squaak for
 Parrot. Piece by piece, we will implement the parser and the parse actions.
-Finally, we shall demonstrate John Conway's "Game of Life" running on Parrot,
+Finally, we'll demonstrate John Conway's "Game of Life" running on Parrot,
 implemented in Squaak.
 
 =head2 Exercises
@@ -203,27 +209,22 @@ implemented in Squaak.
 Last episode's exercise was to add a command line banner and prompt for the
 interactive mode of our compiler. Given the hints that were provided, it was
 probably not too hard to find the solution, which is shown below. This
-subroutine onload can be found in the file Squaak.pir. The relevant lines are
+INIT block can be found in the file src/Squaak/Compiler.pm. The relevant lines are
 marked with a comment
 
-  .sub 'onload' :anon :load :init
-      load_bytecode 'PCT.pbc'
+  INIT {
+      Squaak::Compiler.language('Squaak');
+      Squaak::Compiler.parsegrammar(Squaak::Grammar);
+      Squaak::Compiler.parseactions(Squaak::Actions);
 
-      $P0 = get_hll_global ['PCT'], 'HLLCompiler'
-      $P1 = $P0.'new'()
-      $P1.'language'('Squaak')
-      $P1.'parsegrammar'('Squaak::Grammar')
-      $P1.'parseactions'('Squaak::Grammar::Actions')
-
-      $P1.'commandline_banner'("Squaak for Parrot VM\n") ## set banner
-      $P1.'commandline_prompt'('> ')                     ## set prompt
-
-  .end
+      Squaak::Compiler.commandline_banner("Squaak for Parrot VM.\n"); # set banner
+      Squaak::Compiler.commandline_prompt('> '); # set prompt
+  }
 
 Starting in the next episode, the exercises will be more interesting. For now,
 it would be useful to browse around through the source files of the compiler,
-and see if you understand the relation between the grammar rules in grammar.pg
-and the methods in actions.pm.
+and see if you understand the relation between the grammar rules in src/Squaak/Grammar.pm
+and the methods in src/Squaak/Actions.pm.
 It's also useful to experiment with the --target option described in this
 episode. If you don't know PIR, now is the time to do some preparation for that.
 There's sufficient information to be found on PIR, see the References section
@@ -236,10 +237,7 @@ whatnot, don't hesitate to leave a comment.
 
 =item 1. PIR language specification: docs/pdds/draft/PDD19_pir.pod
 
-=item 2. PIR articles: docs/art/*.pod
-
 =back
-
 
 =cut
 
